# ncm

./: README.rst  environment.yml  pyproject.toml
ncm/: cli.py  main.py
ncm/base/: base_trainer.py
ncm/data_loader/: data_loaders.py
ncm/model/: model.py
ncm/trainer/: trainer.py
ncm/utils/: logger.py
tests/: test_cli.py
